Changelog
=========

4.3 (unreleased)
----------------

- Nothing changed yet.


4.2 (2023-02-25)
----------------

- Fall back to installing project's build backend in an isolated environment
  if a compatible version isn't installed in the current env [CAM-Gerlach]

- Fix metadata extraction failure when project ``long_description`` is included
  as a header rather than a payload in the ``METADTA`` file [CAM-Gerlach]

- Add a fallback to restore compatibility with Setuptools <61 [CAM-Gerlach]

- Fix tests failing due to invalid versions on Setuptools >=66 [CAM-Gerlach]

- Add ``python_requires``, update classifiers, add implicit dependencies
  and remove unused deps in Pyroma's own packaging metadata [CAM-Gerlach]


4.1 (2022-11-24)
----------------

- Moved from a custom trove classifiers list to using the trove-classifiers
  package [hugovk]

- Support checking the Requires-Python metadata [davidandreoletti]

- Silence noisy build backend output when building metadata
  [CAM-Gerlach, wesleybl]

- Official support for Python 3.11 [hugovk, radarhere]

- Some string formatting bugs [hugovk, CAM-Gerlach]

- Now follows black and flake8 rules

- Check if author_email field contains author name [bessman]


4.0 (2022-04-14)
----------------

- No changes from 4.0b2.


4.0b2 (2022-03-29)
------------------

- The deprecation test for test_suite is no longer needed, as the patched
  setuptools method of gathering metadata as a whole is deprecated.

- `description_content_type` also needs a mapping in the metadata map.


4.0b1 (2022-03-28)
------------------

- Added support for PEP517 by using `build` to build the metadata as a
  preferred build method over the old patched setuptools method.
  The old way is depracated and will be removed in 5.0, which also is
  planned to support PEP621.
  Thanks to Christopher A.M. Gerlach for valuable insight into the
  modern packaging systems.


3.3 (2022-03-28)
----------------

- Add a deprecation for `test_suite`

